Fix overflow issue on shows page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,5 +16,5 @@
 }
 
 .ant-table-content {
-    overflow: scroll;
+    overflow-x: auto;
 }
